--- a/src/app/members/member-messages/member-messages.component.html
+++ b/src/app/members/member-messages/member-messages.component.html
@@ -45,6 +45,7 @@
         >
         <div class="input-group-append">
           <button class="btn btn-primary" type="submit" [disabled]="messageForm.invalid || loading">
+            Send
             <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
           </button>
         </div>
